--- a/test/cases/05-VirtualTables/in/test_vtable_select_test_state_mode_2.in
+++ b/test/cases/05-VirtualTables/in/test_vtable_select_test_state_mode_2.in
@@ -10,8 +10,8 @@ select _wstart, _wend, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) 
 select _wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
 select _wstart, count(bool_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wstart, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
@@ -19,8 +19,8 @@ select _wstart, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from te
 select _wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
 select _wend, count(bool_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wend, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
@@ -28,8 +28,8 @@ select _wend, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test
 select _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
 select _wstart, _wduration, _wend, count(bool_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wstart, _wduration, _wend, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
@@ -37,8 +37,8 @@ select _wstart, _wduration, _wend, count(bool_col), avg(u_tinyint_col), sum(u_sm
 select _wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
 select _wduration, count(bool_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wduration, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
@@ -46,7 +46,7 @@ select _wduration, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from
 select _wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select _wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select _wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select _wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
-select _wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) ;
+select _wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) ;
