--- a/test/cases/05-VirtualTables/in/test_vtable_select_test_state_mode_2_batch_hint.in
+++ b/test/cases/05-VirtualTables/in/test_vtable_select_test_state_mode_2_batch_hint.in
@@ -10,8 +10,8 @@ select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wend, count(bool_col), avg(u_tinyint
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, count(bool_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
@@ -19,8 +19,8 @@ select /*+ WIN_OPTIMIZE_BATCH() */_wstart, count(bool_col), avg(u_tinyint_col), 
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wstart, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
 select /*+ WIN_OPTIMIZE_BATCH() */_wend, count(bool_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wend, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
@@ -28,8 +28,8 @@ select /*+ WIN_OPTIMIZE_BATCH() */_wend, count(bool_col), avg(u_tinyint_col), su
 select /*+ WIN_OPTIMIZE_BATCH() */_wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, count(bool_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
@@ -37,8 +37,8 @@ select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, count(bool_col), a
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
 select /*+ WIN_OPTIMIZE_BATCH() */_wduration, count(bool_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wduration, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
@@ -46,7 +46,7 @@ select /*+ WIN_OPTIMIZE_BATCH() */_wduration, count(bool_col), avg(u_tinyint_col
 select /*+ WIN_OPTIMIZE_BATCH() */_wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 select /*+ WIN_OPTIMIZE_BATCH() */_wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
-select /*+ WIN_OPTIMIZE_BATCH() */_wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wduration, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) limit 100 ;
 
-select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), stddev_pop(smallint_col), var_pop(tinyint_col) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) ;
+select /*+ WIN_OPTIMIZE_BATCH() */_wstart, _wduration, _wend, bool_col, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_ntb_full state_window(bool_col, 2) ;
