fix(ci): remove keeper-related paths from workflow triggers

--- a/.github/workflows/new-framework-test.yml
+++ b/.github/workflows/new-framework-test.yml
@@ -21,6 +21,7 @@ on:
       - '!.github/workflows/new-framework-test.yml'
       - 'test/ci/tdgpt_cases.task'
       - 'test/cases/41-TDgpt/**'
+      - "tools/keeper/**"
 
   workflow_dispatch:
     inputs:
