fix: update workflow paths to include keeper and exclude specific test file

--- a/.github/workflows/new-framework-test.yml
+++ b/.github/workflows/new-framework-test.yml
@@ -18,6 +18,10 @@ on:
       - 'tests/parallel/tdgpt_cases.task'
       - 'tests/script/tsim/analytics/**'
       - '**/*.md'
+      - "tools/keeper/**"
+      - '.github/workflows/**'
+      - '!.github/workflows/new-framework-test.yml'
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-TDengineNewFramework
